--- a/_posts/2022-02-10-ilc.md
+++ b/_posts/2022-02-10-ilc.md
@@ -4,26 +4,28 @@ title:  "Interface de linha de comando"
 date:   2022-02-10 21:44:39 -0300
 tags: ilc
 ---
-You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
-Jekyll requires blog post files to be named according to the following format:
+A interface de texto permite interagir com o computador de forma mais direta, mas é bem menos intuitiva. Esse texto tenta explicar alguns fundamentos de como utilizar essa interface.
 
-`YEAR-MONTH-DAY-title.MARKUP`
+---
 
-Where `YEAR` is a four-digit number, `MONTH` and `DAY` are both two-digit numbers, and `MARKUP` is the file extension representing the format used in the file. After that, include the necessary front matter. Take a look at the source for this post to get an idea about how it works.
+Na computação, as **interfaces** são responsáveis por intermediar conexões e trocas entre componentes de um sistema, o que inclui a interação entre pessoa e máquina.
 
-Jekyll also offers powerful support for code snippets:
+Por exemplo: uma entrada de cabo onde você liga seu teclado e mouse pode ser chamada de *interface USB*, pois ela usa o padrão de cabo USB para fazer a comunicação entre a placa mãe do seu computador e o teclado ou mouse.
 
-{% highlight ruby %}
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
-{% endhighlight %}
+Já o próprio mouse ou teclado podem ser chamados de *interfaces humano-computador*, pois permitem que você use suas mãos para manipular o funcionamento da máquina.
 
-Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
+Se você está lendo este texto no seu navegador de internet, então está também fazendo uso de algumas interfaces. Se está ouvindo ele, está fazendo uso de uma interface de som. Se está lendo em uma tela, também está fazendo uso de uma interface, neste caso uma **interface gráfica**.
 
-[jekyll-docs]: https://jekyllrb.com/docs/home
-[jekyll-gh]:   https://github.com/jekyll/jekyll
-[jekyll-talk]: https://talk.jekyllrb.com/
+Este navegador terá  botões onde você pode abrir e fechar abas e possivelmente outros elementos como uma barra de rolagem do lado direito que permite que você se localize no documento ou um botão no canto da tela onde você fecha o navegador.
+
+Todos estes elementos, incluindo este onde o texto é mostrado, são parte da interface gráfica. Uma interface de texto pode até ter botões, mas você não clica neles. Em geral é possível interagir com ela apenas através do teclado.
+
+A maior parte das interfaces de texto, porém, não costuma ter botões. Ao invés de clicar no botão "fechar" você insere um *comando* que dá a ordem de fechar.
+
+A depender do seu sistema operacional, você pode abrir uma interface de linha de comando para conhecer na prática esse conceito.
+
+No Windows, aperte `Win+R` e execute o comando `cmd`. Desde a versão 10 você também tem a opção de instalar o Windows Terminal, que é um emulador de terminal bem mais amigável.
+
+Se estiver no Linux, basta apertar `Ctrl+Alt+T` e na maioria das distribuições um terminal será aberto. Já a combinação `Ctrl+Alt+F1` sairá completamente do modo gráfico. Para retornar a ele use `Ctrl+Alt+F7`.
+
